--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-app-auth",
-  "version": "6.3.0",
+  "name": "@adyptation/react-native-app-auth",
+  "version": "6.3.1",
   "description": "React Native bridge for AppAuth for supporting any OAuth 2 provider",
   "main": "index.js",
   "types": "index.d.ts",
@@ -26,7 +26,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FormidableLabs/react-native-app-auth.git"
+    "url": "https://github.com/adyptation/react-native-app-auth"
   },
   "bugs": {
     "url": "https://github.com/FormidableLabs/react-native-app-auth/issues"
